welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:1: error: not found: type int
def estAdo(a:int){
             ^loneTeen:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return true
           ^loneTeen:3: warning: enclosing method estAdo has result type Unit: return value discarded
    return true
    ^loneTeen:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^loneTeen:5: warning: enclosing method estAdo has result type Unit: return value discarded
  return false
  ^loneTeen:9: error: value &&! is not a member of Unit
  if ((estAdo(a)&&!estAdo(b))|| (!estAdo(a)&&estAdo(b)))  {
                ^loneTeen:9: error: value unary_! is not a member of Unit
  if ((estAdo(a)&&!estAdo(b))|| (!estAdo(a)&&estAdo(b)))  {
                                 ^